syntax = "proto3";

package chat_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/AndreiMartynenko/chat-server/api_config/pkg/chat_v1;chat_v1";

service ChatAPIServices {
    rpc Create (CreateNewChatRequest) returns (CreateNewChatResponse);
    rpc Delete (DeleteChatRequest) returns (DeleteChatResponse);
    rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
}

// Create NewChat Request
message CreateNewChatRequest {
    repeated string usernames = 1;
}

// Create NewChat Response
message CreateNewChatResponse {
    int64 id = 1;
}

// Delete Chat Request 
message DeleteChatRequest {
    int64 id = 1;
}

message DeleteChatResponse {
  google.protobuf.Empty delete_response = 1;
}

// SendMessage Request 
message SendMessageRequest {
    string from = 1;
    string text = 2;
    google.protobuf.Timestamp timestamp = 3;
    int64 chat_id = 4;
}

// SendMessage Response
message SendMessageResponse {
  google.protobuf.Empty send_message_response = 1;
}
